--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <h2>Reaction Diffusion System</h2>
   <h2>a simulation of two virtual chemicals reacting and diffusing</h2>
+  <a href="https://woofpuppywoof.github.io/games">[Home]</a>
 
   <body>
     <script src="sketch.js"></script>
